<resources>
    <string name="app_name">Fjerdingen Hotell</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="QR_description">Scan this QR-code to enter your room!</string>
    <string name="welcome_message">Welcome to Fjerdingen Hotel</string>
    <string name="welcome_information">You can use this app as a room key, find places to eat nearby on the map, or read the menu with hotel services</string>
    <string name="map_button">Map</string>
    <string name="roomservice_button">Roomservice</string>
    <string name="title_activity_maps2">Map</string>
    <string name="log_out">Log Out</string>
    <string name="options">Options</string>
    <string name="home_button">Home</string>
    <string name="maps_button">Maps</string>
    <string name="user_id">Rikheim</string>
    <string name="room_number">Room Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Sign in</string>
    <string name="password">Password</string>
    <string name="user_name">yourmail@example.com</string>
    <string name="create_user">Sign Up</string>
    <string name="item_name">Item</string>
    <string name="item_description">Description</string>
    <string name="item_price">Price</string>
    <string name="item_outlet">Where to buy</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="repeat_email">Repeat email address</string>
</resources>
