<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_fragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/welcome_message"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <TextView
        android:padding="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_information"
        android:id="@+id/textView4"
        android:background="@drawable/background_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/QR_description"
        android:textSize="12sp"
        android:layout_marginBottom="49dp"
        android:id="@+id/textView"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/QR_image_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@color/colorAccent"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_number"
        android:textSize="10sp"
        android:id="@+id/textView5"
        android:layout_above="@+id/room_number_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-5dp"/>
    <TextView
        android:id="@+id/room_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_above="@+id/QR_image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

    </LinearLayout>



</RelativeLayout>
