<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/colorAccent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_name"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_description"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_price"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_outlet"
            android:textStyle="bold"/>
    </LinearLayout>

    <ListView
        android:id="@+id/room_service_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>


    <!--
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableRow android:weightSum="4"
            android:padding="10dp"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_name"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_description"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_price"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_outlet"
                android:textStyle="bold"/>
        </TableRow>

    </TableLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableLayout
            android:id="@+id/roomserviceTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableLayout>
    </ScrollView>
    -->
</LinearLayout>
